--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,10 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "CV"
+    url: /cv/
+
+
   #- title: "Talks"
   #  url: /talks/    
 
